2005-12-22  Stipe Tolj  <stolj at kannel.org>
  * gw/wml_compiler.c: fixing bug #282, which caused a segfault while
    trying to access the xmlErrorPtr type, but libxml2's xmlGetLastError()
    didn't provide any data for it. Which means the libxml2 parsing broke,
    but we don't get any valid xmlGetError() values?! Thanks to Mindaugas
    again for reporting this issue and provide also the fix.
    
2005-12-22  Stipe Tolj  <stolj at kannel.org>
  * gw/wml_compiler.c: fixing bug #283, which caused a segfault while
    passing NULL'ed arguments to strcmp(). Thanks to Mindaugas for report.

2005-12-18  Alexander Malysh <amalysh at kannel.org>
  * gw/smsc/smsc_smpp.c: Implemented data_sm handling for MO. Also
    rearranged code to avoid code duplication.
    Replaced dump_pdu with macros in order to save function call.
    With this commit #216 fixed.

2005-12-14  Stipe Tolj  <stolj at kannel.org>
  * doc/userguide/userguide.xml: added 'validityperiod' to SMPP section.
  * gw/smsc/smsc_smpp.c: added 'validityperiod' handling inside smsc
    group. This now allows general validity period setting inside the smpp
    smsc group. Priority order is: message specific value given via sendsms
    interface and then smsc config value.
    Thanks to Hillel <hillel@ecommunicate.co.za> for this idea.
    [Msg-Id: <LBEAKAELDENCIDOPBLGCOEKGDAAA.hillel@ecommunicate.co.za>]
    
2005-12-13  Stipe Tolj  <stolj at kannel.org>
  * gw/wml_compiler.[ch], gw/wapbox.c, test/wml_tester.c: fixing major 
    showstopperlong bug #260, causing wapbox to block under the following
    condition: user request a text/vnd.wap.wml document of considerable
    size with bogus XML content in it. The wml_compiler() call used to
    handle the XML parsing in relaxed style, which means passing 
    XML_PARSE_RECOVER as bit mask to libxml2's parsing function would let
    the bogus XML content pass and afterwards our whole arsenal of WML